After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 703394 - 'Paste' option from 'Edit' menu is always enabled
'Paste' option from 'Edit' menu is always enabled
Status: RESOLVED FIXED
Product: seahorse
Classification: Applications
Component: general
3.8.x
Other Linux
: Normal normal
: ---
Assigned To: Seahorse Maintainer
Seahorse Maintainer
Depends on:
Blocks:
 
 
Reported: 2013-07-01 13:46 UTC by Marie.KOWALCZYK
Modified: 2013-07-23 09:33 UTC
See Also:
GNOME target: ---
GNOME version: 3.7/3.8


Attachments
Only permit import from clipboard when data is available (2.10 KB, patch)
2013-07-05 14:39 UTC, Ikey Doherty
reviewed Details | Review

Description Marie.KOWALCZYK 2013-07-01 13:46:35 UTC
Steps to reproduce:
1. Start system and log in (or Reboot in order to clear cache)
2. Go to Applications and select "Password and keys"
3. Click "Edit" from menu

Expected result:
"Paste" should be disabled

Actual result:
"Paste" is enabled. Clicking "Paste" option would not paste anything

Note: "Gedit" application has "Paste" option disabled
Comment 1 Ikey Doherty 2013-07-05 14:39:11 UTC
Created attachment 248465 [details] [review]
Only permit import from clipboard when data is available
Comment 2 Stef Walter 2013-07-11 12:33:55 UTC
Review of attachment 248465 [details] [review]:

::: src/seahorse-key-manager.c
@@ +389,3 @@
+	gboolean text_available;
+	
+	text_available = gtk_clipboard_wait_is_text_available (clipboard);

Does this function block for a significant amount of time? Other than that the patch looks good to me.

Otherwise, we can use gtk_clipboard_request_contents() + callback which calls gtk_selection_data_targets_include_text().
Comment 3 Ikey Doherty 2013-07-11 15:07:35 UTC
I haven't experienced any blocks using this. I chose it because it takes less time than actually pulling the text from the clipboard, as opposed to the gtk_clipboard_request methods
Comment 4 Stef Walter 2013-07-11 17:08:45 UTC
Makes sense. Thanks for this patch. I added one little check for NULL text, but other than that, pushed.

commit e76c46a7f4bfca6df0851be01df49d5053e03218
Author: Michael I Doherty <michael.i.doherty@intel.com>
Date:   Fri Jul 5 15:37:17 2013 +0100

    Only permit import from clipboard when data is available
Comment 5 Ikey Doherty 2013-07-11 18:43:56 UTC
Ah good call, thanks :)
Comment 6 Philippe "RzR" Coval 2013-07-23 09:33:48 UTC
I confirm this is working but I had to adapt it for gnome-3-8 branch 

Just ask it, it anyone care of this...