Only permit import from clipboard when data is available

https://bugzilla.gnome.org/show_bug.cgi?id=703394